test_case/rust-lang_rust/52024_403037282_2.rs
\n"},"level":"error","spans":[{"file_name":"/checkout/src/test/ui/existential_type.rs","byte_start":1258,"byte_end":1264,"line_start":50,"line_end":50,"column_start":23,"column_end":29,"is_primary":true,"text":[{"text":"        let _: &str = bomp(); //~ ERROR mismatched types","highlight_start":23,"highlight_end":29}],"label":"expected &str, found anonymized type","suggested_replacement":null,"suggestion_applicability":null,"expansion":null}],"children":[{"message":"expected type `&str`\n   found type `Boo`","code":null,"level":"note","spans":[],"children":[],"rendered":null}],"rendered":"error[E0308]: mismatched types\n  --> /checkout/src/test/ui/existential_type.rs:50:23\n   |\nLL |         let _: &str = bomp(); //~ ERROR mismatched types\n   |                       ^^^^^^ expected &str, found anonymized type\n   |\n   = note: expected type `&str`\n              found type `Boo`\n\n"}
[00:46:14] {"message":"mismatched types","code":{"code":"E0308","explanation":"\nThis error occurs when the compiler was unable to infer the concrete type of a\nvariable. It can occur for several cases, the most common of which is a\nmismatch in the expected type that the compiler inferred for a variable's\ninitializing expression, and the actual type explicitly assigned to the\nvariable.\n\nFor example:\n\n